diesel_compile_tests/tests/fail/derive/bad_deserialize_as.stderr
error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(deserialize_as = Foo)]`
 --> tests/fail/derive/bad_deserialize_as.rs:7:28
  |
7 |     #[diesel(deserialize_as)]
  |                            ^

error: expected `=`
  --> tests/fail/derive/bad_deserialize_as.rs:14:28
   |
14 |     #[diesel(deserialize_as(Foo))]
   |                            ^

error: expected identifier
  --> tests/fail/derive/bad_deserialize_as.rs:21:31
   |
21 |     #[diesel(deserialize_as = "foo")]
   |                               ^^^^^

error: expected identifier
  --> tests/fail/derive/bad_deserialize_as.rs:28:31
   |
28 |     #[diesel(deserialize_as = 1omg)]
   |                               ^^^^
